# rsm-gen-ai-task

./: Dockerfile  README.md  check_observability_env.py  docker-compose.yml  init_db_standalone.py  pyproject.toml  startup.sh  test_langfuse_integration.py  test_langsmith_integration.py
initdb/: 02-create-rag-chunks-table.sql
rag_microservice/: api.py  db.py  embeddings.py  ingest_pdf.py  init_db.py  llm_service.py  main.py  observability.py  pdf_ingest.py  test_db_count.py  test_db_insert.py  test_db_schema.py  test_embeddings.py  test_observability.py  test_pdf_ingest.py  test_similarity_search.py  unified_scraper.py
rag_microservice/documents/outputs/: all_chunks.txt
rag_microservice/legacy_stuff/: ingest_pep8.py  ingest_websites.py  test_db_insert.py  test_pep8_debug.py  web_scraper.py
rag_microservice/tests/: test_db_reset.py  test_llm_integration.py
