[tool.poetry]
name = "rag-microservice"
version = "0.1.0"
description = "A Python-based Retrieval-Augmented Generation (RAG) microservice with full observability"
authors = ["Matias Stark <matias.silva.cares@gmail.com>"]
readme = "README.md"
packages = [{include = "rag_microservice"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
langchain = "^0.0.350"
langchain-openai = "^0.0.2"
langchain-community = "^0.0.10"
pypdf = "^3.17.1"
chromadb = "^0.4.18"
sentence-transformers = "^2.2.2"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
langfuse = "^2.0.0"
langsmith = "^0.0.69"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
